# android-compose-clean-architecture-sample

./: README.md  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts
app/src/androidTest/java/com/eslam/bakingapp/ui/: RecipeDetailScreenTest.kt
app/src/androidTest/java/com/eslam/bakingapp/ui/components/: ComponentsTest.kt
app/src/main/java/com/eslam/bakingapp/: BakingApplication.kt  MainActivity.kt
app/src/main/res/drawable/: splash_background.xml
core/common/: build.gradle.kts
core/database/: build.gradle.kts
core/database/src/main/: AndroidManifest.xml
core/database/src/main/java/com/eslam/bakingapp/core/database/: BakingDatabase.kt
core/network/: build.gradle.kts
core/network/src/main/: AndroidManifest.xml
core/security/: README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
core/security/scripts/: encode_keys.py
core/security/src/main/cpp/: CMakeLists.txt  native-keys.cpp
core/ui/: build.gradle.kts
docs/: compose_guidelines.md  interview_questions.md  performance.md
features/cooking-timer/: README.md  build.gradle.kts
features/cooking-timer/src/main/: AndroidManifest.xml
features/cooking-timer/src/main/res/anim/: slide_in_left.xml  slide_out_left.xml  slide_out_right.xml
features/cooking-timer/src/main/res/drawable/: bg_circle.xml  ic_baking.xml  ic_boiling.xml  ic_error.xml  ic_grilling.xml  ic_pause.xml  ic_play.xml  ic_presets.xml  ic_reset.xml  ic_resting.xml  ic_roasting.xml  ic_simmering.xml  ic_timer_empty.xml
features/cooking-timer/src/main/res/layout/: activity_cooking_timer.xml  fragment_create_timer.xml  fragment_timer_detail.xml  fragment_timer_list.xml  fragment_timer_presets.xml  item_preset.xml  item_timer.xml
features/cooking-timer/src/main/res/menu/: menu_timer_list.xml
features/cooking-timer/src/main/res/navigation/: cooking_timer_nav_graph.xml
features/cooking-timer/src/main/res/values/: colors.xml  strings.xml  themes.xml
features/home/: build.gradle.kts
features/login/: build.gradle.kts
features/recipe-details/: build.gradle.kts
gradle/: libs.versions.toml
metrics-sdk/: README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
metrics-sdk/src/main/: AndroidManifest.xml
metrics-sdk/src/main/cpp/: CMakeLists.txt
metrics-sdk/src/main/cpp/bridge/: native_bridge.cpp
metrics-sdk/src/main/cpp/events/: event_detector.cpp  event_detector.h
metrics-sdk/src/main/cpp/imaging/: image_processor.cpp  image_processor.h
metrics-sdk/src/main/cpp/metrics/: metrics_aggregator.cpp  metrics_aggregator.h
metrics-sdk/src/main/cpp/session/: session_manager.cpp  session_manager.h
metrics-sdk/src/main/java/com/eslam/metrics/api/: MetricsConfig.kt  MetricsSDK.kt
metrics-sdk/src/main/java/com/eslam/metrics/data/repository/: MetricsRepository.kt
metrics-sdk/src/main/java/com/eslam/metrics/data/room/: Converters.kt  EventDao.kt  EventEntity.kt  MetricsDatabase.kt  SessionDao.kt  SessionEntity.kt
metrics-sdk/src/main/java/com/eslam/metrics/internal/bridge/: EventType.kt  NativeBridge.kt
metrics-sdk/src/main/java/com/eslam/metrics/internal/capture/: ScreenshotManager.kt
metrics-sdk/src/main/java/com/eslam/metrics/internal/detection/: AnrWatchdog.kt  CrashHandler.kt  MemoryMonitor.kt
metrics-sdk/src/main/java/com/eslam/metrics/internal/lifecycle/: LifecycleTracker.kt
(+92 files in other folders)
